--- a/.github/workflows/slack-report-reminder.yml
+++ b/.github/workflows/slack-report-reminder.yml
@@ -1,1 +1,25 @@
-.github/workflows/slack-report-reminder.yml
+# .github/workflows/slack-report-reminder.yml
+name: "Slack マンスリーレポートリマインダ"
+
+on:
+  workflow_dispatch:   
+  schedule:
+    - cron: '40 5 8 * *' 
+
+jobs:
+  remind:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+      - name: Install deps
+        run: pip install slack-sdk
+      - name: Run reminder
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        run: | 
+          python scripts/notify_non_reporters.py
+          
